--- a/.gitignore
+++ b/.gitignore
@@ -120,19 +120,23 @@ site/
 # OS
 Thumbs.db
 .DS_Store
-clean_notebooks.py
+
 # Docker
 .dockerignore
-C:\Users\Lenovo i7\Desktop\my_personal_projects\chunckerflow\production_setup.md
+
 # Benchmarks
 benchmarks/results/
 benchmarks/data/
-C:\Users\Lenovo i7\Desktop\my_personal_projects\chunckerflow\publish_quick.bat
+
 # Temporary files
 tmp/
 temp/
 *.tmp
+
+# Build and publish scripts
+clean_notebooks.py
 publish.bat
+publish_quick.bat
 # Specification files (used during development, not needed in production)
 rag-summery-framework.md
 chunking_framework_spec.md
