--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "chunk-flow"
+name = "chunckerflow"
 version = "0.1.0"
 description = "Production-grade async text chunking framework for RAG systems"
 readme = "README.md"
@@ -103,14 +103,14 @@ dev = [
 
 # All optional dependencies
 all = [
-    "chunk-flow[api,openai,huggingface,google,cohere,viz,dev]",
+    "chunckerflow[api,openai,huggingface,google,cohere,viz,dev]",
 ]
 
 [project.urls]
-Homepage = "https://github.com/chunkflow/chunk-flow"
-Documentation = "https://chunk-flow.readthedocs.io"
-Repository = "https://github.com/chunkflow/chunk-flow"
-Issues = "https://github.com/chunkflow/chunk-flow/issues"
+Homepage = "https://github.com/guybass/chunckerflow"
+Documentation = "https://github.com/guybass/chunckerflow"
+Repository = "https://github.com/guybass/chunckerflow"
+Issues = "https://github.com/guybass/chunckerflow/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
