chore: clean up repository for v0.1.0 release
- Remove temporary development files (specs, publish scripts, notes)
- Update package name from chunk-flow to chunckerflow throughout
- Update all GitHub URLs to guybass/chunckerflow
- Update author information to Guy Basson
- Update CHANGELOG with correct version and date (0.1.0 - 2025-01-29)
- Update CONTRIBUTING.md for solo project status
- Clean up .gitignore (remove invalid Windows paths)
- Remove test artifacts and cache directories

Ready for PyPI publication.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
 authors = [
-    {name = "ChunkFlow Contributors"}
+    {name = "Guy Basson", email = "guy-shal.huji.ac.il@mail.huji.ac.il"}
+]
+maintainers = [
+    {name = "Guy Basson", email = "guy-shal.huji.ac.il@mail.huji.ac.il"}
 ]
 keywords = [
     "chunking",
